spade-tests/src/snapshots/spade_tests__ast_lowering__enum_self_constructor_replaced_types_work.snap
---
source: spade-tests/src/ast_lowering.rs
---
enum Maybe<L, R, #uint N> {
    Left { val: [L; N] },
    Right { val : [R; N] },
}

impl<T> Maybe<T, bool, 2> {
    fn foo(self, t: T, u: ()) -> [Self; 2] {
        [Self::Left([t, t]), Self::Right([u, u])]
    }
}


error: Argument type mismatch. Expected [bool; 2] got [(); 2]
  ┌─ testinput:8:42
  │
7 │     fn foo(self, t: T, u: ()) -> [Self; 2] {
  │                           -- Type () inferred here
8 │         [Self::Left([t, t]), Self::Right([u, u])]
  │                                          ^^^^^^ expected [bool; 2]
  │
  = note: Expected: bool
                in: [bool; 2]
               Got: ()
                in: [(); 2]
